examples/valid/funct.lama
int b = 1 ;
int l ( int a ) { 
    a ++ ;
    return a; 
}
print l(b);