examples/invalid/if_else1.lama
int i = 0;
if (i > 0) i++; 
else return 1;